# clip4cc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/clip4cc/: __init__.py  beam.py  data_loader.py  file_utils.py  json_loader.py  model_arrange.py  modeling.py  module_clip.py  module_cross.py  module_decoder.py  optimization.py  preprocess.py  rawimage_util.py  tokenization_clip.py  until_config.py  until_module.py  util_functions.py
src/clip4cc/cross-base/: cross_config.json
src/vectorizer/: __init__.py  data_loader.py  model_arrange.py  modeling.py  module_cross.py  rawimage_util.py  tokenization_clip.py  util_functions.py
vectorizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
